fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>HTML stands for Hypertext MArkup Language. Used to give content structure.</li>
+          <li>HTML stands for Hypertext Markup Language. Used to give content structure.</li>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
           <li>Head element is a container for metadata.</li>
@@ -36,7 +36,7 @@
     <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
-        <li>CSS stands for cascading style sheets. Gives conent style.</li>
+        <li>CSS stands for cascading style sheets. Gives content style.</li>
         <li>A margin indicates how much space we want around the outside of an element.</li>
         <li>A padding indicates how much space we want around the content inside an element.</li>
         <li>If I want to style an element directly in the HTML file, use inline CSS.</li>
